--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # Package Files #
 *.jar
+# not the datadog java agent
+!datadog/dd-java-agent.jar
 *.war
 *.ear
 *.zip
@@ -20,4 +22,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# OSX
 .DS_Store
